796の分野の歴史を追加

--- a/79-諸芸．娯楽/796-将棋/796-将棋.md
+++ b/79-諸芸．娯楽/796-将棋/796-将棋.md
@@ -6,3 +6,120 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 「将棋」類（駒を動かす思考ゲーム）の射程：将棋だけでなくチェス／チェッカー等を含む“総称”として扱うこと、囲碁（石を置く陣取り型）や賭博、その他の室内娯楽との境界、盤・駒・捕獲・詰み／目標達成・引き分けといった共通要素
+- 2. 起源と古代の盤上競技：戦争・狩猟・儀礼の比喩としてのボードゲーム、チャトランガ→シャトランジ系の成立、アルケルケ系（後のチェッカー／ドラフツへ）など複数の源流
+- 3. 西方への展開（チェスの形成）：イスラーム世界を媒介としたヨーロッパへの伝播、中世の駒・盤・用語の変化、15世紀頃のルール刷新（強いクイーン等）と近代チェスの基礎、棋書・問題（パズル）文化の成立
+- 4. 東方への展開（象棋類と地域将棋）：中国の象棋、朝鮮のチャンギ、東南アジアのマックルック等への分岐、交易・王朝文化・軍事的象徴のなかでの受容とローカルルールの定着
+- 5. 日本将棋の成立：平安将棋・大将棋など古い形の将棋群、成りの思想、持ち駒と「打つ」手の成立が生んだ戦略性、室町〜江戸にかけての標準化
+- 6. 日本将棋の制度化と近代化：江戸期の家元・名人制度と将棋所、明治以降の新聞・雑誌と観戦文化、研究会と定跡の発展、プロ組織とタイトル戦が作る近代競技の枠組み
+- 7. チェスの国際競技化：カフェ文化とサークル、近代トーナメントと世界選手権、国際組織（FIDE）とルール統一、冷戦期の隆盛と大衆文化（マッチの社会的意味）としてのチェス
+- 8. チェッカー／ドラフツの発展：ヨーロッパでの近世以降の整備、8×8と10×10など複数の規格、世界的な競技団体と大会、終盤解析・詰め（問題）文化と大衆娯楽としての広がり
+- 9. 近縁ゲームと変種の多様化：地域固有の将棋類、変則将棋やフェアリーチェス、盤面サイズや初期配置を変えた実験、教育用・入門用ルールが果たした役割
+- 10. デジタル時代の転換：コンピュータ対局と研究の高度化、AIの登場が定跡観・評価観を変えた過程、オンライン対局・配信・観戦コミュニティの拡大、国際交流と将来像
+-->
+
+ここでいう「将棋」は、日本の将棋だけを指すのではなく、盤上で複数の駒（または同等のコマ）を動かし、捕獲・封鎖・詰みなどの条件によって勝敗を決める思考ゲームの一群を含む。代表例がチェスであり、より簡明な形で大衆に広がったチェッカー（ドラフツ）も同じ系譜にある。石を置いて勢力圏を争う囲碁のような陣取り型とは、局面の生成や終局の感触が異なり、賭博性を前提にした遊戯とも、倫理や制度の設計が違う。それでもこの系統のゲームは、戦争や統治の比喩としての物語性、棋譜や問題を通じて知を蓄積する文化、そして競技としての統一と国際化という共通の道を歩んできた。
+
+### 1. 枠組み：駒を動かす思考ゲームの共通性
+
+この系統の核心は、盤面という抽象空間における「移動」と「相互作用」にある。駒の種類が役割差を作り、位置が価値を変え、捕獲や進入制限が戦術と戦略を生む。勝ち方は、王を詰ませる、王将を詰ませる、相手の駒を取り尽くす／動けなくするなど多様だが、いずれも「読む」ことと「評価する」ことが中心にある点は同じである。序盤・中盤・終盤という区分が自然に生まれ、序盤には型（定跡）が、終盤には詰みや勝ち筋の技法が整理される。
+
+さらに重要なのは、対局が「記録できる」ことである。棋譜が残ると、強い者の手順が再利用され、同じ局面を別の時代・別の土地の人が追体験できる。書物化が進むと、手筋の名称や評価語が生まれ、議論の共同体が成立する。対局時計の導入、標準的な記譜法、反則や引き分け規定の明文化は、遊びを競技へと押し上げ、観戦の文化を支えた。チェスではアルパード・エロが提案したレーティングが1960年代以降に広く採用され、国や大会をまたいで実力を比較しやすくした。将棋でも段位、リーグ戦、タイトル戦が「強さ」を物語として継続的に提示する仕組みになった。
+
+棋譜が残るということは、「強さ」を個人の逸話から切り離し、共同体の検証可能な知識へ変換するということでもある。チェスでは代数式記譜が国際的な共通言語になり、将棋でも記号や用語を用いた棋譜が観戦記や解説書を支えてきた。記録が増えるほど、名局は引用され、失敗は反省材料として共有され、理論は更新される。盤上競技の歴史は、ルールそのものの発明だけでなく、知識の保存と流通の技術史でもある。
+
+一見すると細部に見える規定も、実はゲームの性格を決める。同一局面の繰り返しは、チェスでは反復の規定が引き分けと結びつき、勝ち筋が遠い局面では手数の規定が終局の気配を作る。将棋では駒が循環するため千日手が重要な安全弁になり、双方の入玉が長引く局面では持将棋という整理が必要になる。こうした規定は「無限に続く戦い」を現実の勝負へ収めるための約束であり、観戦者が納得できるストーリーの作り方にも間接的に作用する。
+
+### 2. 起源と古代：運と技から、規則と理性へ
+
+駒を動かす遊びの祖型は一つに定まらない。古代エジプトのセネトやメソポタミアの「ウル王朝のゲーム」のように、駒を進める遊戯は早い時代から存在し、運と技の配分は地域や時代で揺れてきた。古代ローマのラトルンクリ（Ludus latrunculorum）は盤上で駒を動かし挟撃で取るとされ、軍事訓練や知的遊戯として語られることがある。このような前史の上に、より明確に「役割の異なる駒」を据えて戦いを抽象化した系統として、インドで成立したとされるチャトランガが現れる。歩兵・騎兵・戦車・象といった軍の要素を写し取り、のちにペルシアのシャトランジへ継承された。
+
+チャトランガが西へ向かうとシャトランジとなり、イスラーム世界の学芸と結びついて棋書や問題の文化を育てる。東へ向かえば中国の象棋をはじめとする将棋類へ接続し、さらに日本の将棋へも遠い影響を及ぼす。こうした伝播は、単に遊びが移動したというより、都市・交易・宗教・教育といった社会の回路の中で「学べる遊び」が選び取られ、土地ごとに作り替えられていった過程である。
+
+盤上遊戯は、しばしば「無益な遊び」と「有益な訓練」のあいだで評価が揺れる。運任せの遊びが賭博と結びつきやすい一方、規則と推論で勝敗が決まるゲームは、理性や節度を鍛えるものとして正当化されやすかった。イスラーム世界では賭博への戒めとの緊張が語られることがあり、ヨーロッパでは寓意画や説教の題材としてチェスが取り上げられる一方で、騎士の教養や宮廷文化の一部としても扱われた。東アジアでも、勝負の厳しさが人間の器量を映すという理解が生まれ、遊戯が共同体の価値観を映す鏡になっていく。
+
+他方、斜め移動と捕獲を軸にしたアルケルケのような遊戯も、伝播しやすい形で各地に広がった。古代末期から中世にかけて、交易路と都市文化がこれらの遊戯を運び、道具・言葉・勝敗観が土地の価値観に合わせて変わっていく。ひとつの「原型」から単線的に枝分かれしたというより、似た発想が複数の場所で育ち、交流の中で影響し合って現在の諸形態を作った、と捉えるほうが実態に近い。
+
+### 3. 西方での展開：チェスの近代化と棋書の時代
+
+シャトランジはイスラーム世界で洗練され、詩や寓意の対象としても扱われた。その後ヨーロッパに伝わると、封建社会の身分秩序を映す駒の名称や意匠が整えられ、教養としてのチェスが定着する。13世紀、カスティーリャ王アルフォンソ10世の『遊戯の書（Libro de los juegos）』（1283年）は、チェスと他の盤上遊戯を図入りで紹介し、王権が遊戯を文化財として編み上げた象徴的な例になった。
+
+大きな転機は15世紀末で、女王（クイーン）や僧正（ビショップ）の動きが強化され、短期決戦性の高い近代チェスの骨格が生まれた。1497年のルセナ『Repetición de amores y arte de ajedrez』は終盤や問題を体系的に示した初期の重要文献であり、16世紀にはルイ・ロペスが『Libro de la invención liberal y arte del juego del axedrez』（1561年）で序盤理論に道を開く。17世紀のジョアッキーノ・グレコは大胆な攻撃の棋譜と問題で人気を得た。18世紀にはフランソワ＝アンドレ・フィリドールが『L’analyse du jeu des Échecs』（1749年）で「ポーン構造」の観点を強調し、戦略の言語を与えた。こうした棋書と問題集は、遊戯を「学び」の対象へと押し上げ、後の競技化の土台になった。
+
+理論が共同体の財産になるためには、書物だけでなく「語り合う場」も必要になる。18世紀のパリではカフェ・ド・ラ・レジャンスが対局と観戦の中心地として知られ、強者が集い、名局が評判になり、批評の言葉が磨かれていった。フィリドールが「ポーンはチェスの魂である」と語ったと伝えられるように、概念は格言として流通し、学びの入口にもなった。こうした都市の対局空間は、のちのクラブ文化や大会運営へ連続し、チェスを「個人の遊び」から「公共の競技」へ押し出す見えない基盤になっていく。
+
+19世紀中頃には、アドルフ・アンデルセンの名局や、ポール・モーフィの欧州遠征（1858年）に象徴されるように、犠牲を連ねて王を狙う攻撃的な気分が広がった。ところが理論が進むにつれ、華麗さだけでは勝てないことが明らかになり、シュタイニッツは防御と小さな優位の積み上げを重視する原理を打ち立てる。タラッシュの体系化、ニムゾヴィッチらのハイパーモダンの発想は、中心を「占領」するのではなく「支配」するという逆説を提示し、チェスが抽象空間の支配をめぐる科学へと傾いていく流れを加速した。
+
+### 4. 東方での展開：象棋類と地域将棋の多様性
+
+東アジアでは、駒を動かす発想が独自の盤面設計と結びついた。中国の象棋は「川」や「宮」を盤上に設け、王権の内外という政治空間を視覚化する。駒に書かれた文字が役割を明示し、捕獲の仕方そのものが特色になる駒もある。朝鮮のチャンギは象棋と近縁だが、配置や運用の差が地域の嗜好を映し、盤面の呼称や作法も共同体の記憶に刻まれた。東南アジアのマックルックは、駒の力学がチェスと似つつも、初期配置や昇格の考え方に特色を持つ。
+
+こうした象棋類は、軍事・官僚・商業のネットワークの中で伝わり、ルールの差異が「国・都市・共同体の誇り」として固定化されることもあった。駒を並べる所作、勝敗の礼法、強者を招いて競わせる慣習は、単なる遊びを超えて、統治や教養の象徴として働く。同じ「駒を動かす戦い」でも、何を大切にするかで規則が変わる。その違いが、のちに日本将棋が独自の強い個性を持つ伏線にもなった。
+
+### 5. 日本将棋の成立：成りと持ち駒が生んだ循環性
+
+日本の将棋は、平安期の小規模な将棋（平安将棋）から、中世にかけて多様な大型将棋（大将棋など）へ展開したとされ、盤・駒・成りの思想が成熟していった。鎌倉時代の文献『二中歴』（13世紀初頭）に将棋の名が見えることはよく知られ、遊戯が貴族社会から武家社会へ浸透していく過程を示唆する。大型将棋が並立した時期は規則の実験が活発だった時代でもあり、「戦い」をどう抽象化するかについて多くの試みが行われた。
+
+現在の将棋に結実するうえで重要なのが、成りによる局面のダイナミズムと、取った駒を自分の駒として再投入する「持ち駒」と「打つ」手である。これにより駒の総量が盤上で循環し、優勢側が交換を積み上げて勝つだけでは終わりにくい構造が生まれた。戦術が複雑化する一方で終盤に逆転の余地が残るため、観戦者にとっても劇的な展開が起こりやすい。戦国期から近世にかけて、対局が武芸や教養の一部として扱われる中で、駒の書体、盤の様式、礼法も整い、実戦と問題作成が相互に刺激し合い、定跡や手筋が言語化されていった。
+
+この言語化の中で将棋は「戦型」を獲得する。居飛車と振り飛車、矢倉、角換わり、相掛かり、四間飛車、三間飛車といった呼び名は、単なる分類ではなく、過去の名局や流行、評価の揺れを背負った記憶装置である。「打つ」手の存在は守りの形と攻めの速度のバランスを独特にし、美濃囲い、穴熊など城の名に象徴される「守備構造の芸術」を育てた。
+
+将棋の広がりは、盤上だけでなく道具の側にも現れる。盤と駒は、紙の上の記号ではなく、手触りや音を伴う工芸品であり、木地、書体、彫りの深さといった差異が「好み」や「格」を生む。江戸期以降、駒の産地として知られる山形県天童のように、地域の産業と結びついて将棋が日常へ浸透した例もある。棋譜が新聞や雑誌に載る以前から、盤と駒は家の中に置かれ、遊びを家庭の習慣として定着させる媒介になった。
+
+### 6. 制度とメディア：近代競技としての将棋
+
+江戸時代には、将棋が公的な庇護と結びつき、家元や名人の系譜、将棋所といった制度が威信の装置として機能した。大橋宗桂や伊藤宗印・伊藤宗看といった名手の名は、実力だけでなく制度史の節目として記憶される。御城将棋のような公的対局は、強者の力を可視化し、序列を演出する儀礼でもあった。一方で町人文化の側では詰将棋が独自の芸術として発展する。伊藤看寿『将棋図巧』（1737年）は詰将棋史の金字塔とされ、局面の美と論理の厳密さが両立し得ることを示した。
+
+明治以降は新聞・雑誌が観戦文化を育て、対局の公開性が増す。天野宗歩の評価が象徴するように、「強さ」を逸話だけでなく棋譜の説得力で語る近代感覚が強まった。1924年には東京将棋連盟（のちの日本将棋連盟）が結成され、プロの運営と普及の基盤が固まる。1935年に始まった名人戦は、挑戦者決定の仕組みと長期の物語を結びつけ、戦後の棋界を牽引した。大山康晴、中原誠、谷川浩司、羽生善治といったスターは、実力とともに時代のメディアに支えられ、将棋を国民的な知的娯楽として可視化した。さらに竜王戦（1988年開始）など新たなタイトルが加わることで、対局数の増加と研究の高度化が加速し、プロ競技としての厚みが増していった。
+
+将棋が広く「観られる競技」になった背景には、放送メディアの継続的な役割がある。NHK杯テレビ将棋トーナメントは1951年にラジオ放送として始まり、1962年からテレビ放送へ移行して長く親しまれてきた。対局そのものだけでなく、解説という形式が、読みを言葉に変え、初学者と上級者を同じ場に集める。観戦記や解説書、詰将棋の連載、さらにはイベントや教室といった入口の増殖によって、将棋は「指す人」だけでなく「学ぶ人」「観る人」を含む文化になった。
+
+プロの世界が厚くなると入口の制度も整う。奨励会は年少者を含む修業の道として機能し、師弟制度は技術だけでなく作法と倫理を継承する装置になった。女流棋士制度も発展し、清水市代らの活躍は競技としての多様性を可視化した。新聞の観戦記、雑誌、テレビ中継、そして近年のネット配信は、専門性を物語へ翻訳し、観る将棋を成立させる大切な基盤になっている。羽生善治が1996年に主要タイトルをすべて制覇して「七冠」を達成したことは、個人の偉業であると同時に、タイトル制度が時代のスターを生み出す装置として機能した証拠でもあった。
+
+### 7. チェスの国際競技化：統一規則と世界選手権
+
+ヨーロッパでは18〜19世紀にカフェやクラブが社交の核となり、対局が都市文化の一部として根づいた。1851年のロンドンでの大会は近代トーナメントの起点として語られ、同年の名局「不滅の一局（Immortal Game）」は、競技が物語として消費される時代の到来を象徴する。1886年のヴィルヘルム・シュタイニッツ対ヨハネス・ツケルトルトの対決は近代的な世界選手権の始まりとされ、その後エマヌエル・ラスカー、ホセ・ラウル・カパブランカ、アレクサンドル・アレヒンと王者が交代し、チェスは国際的な知の競技として権威を得ていく。1924年、国際チェス連盟（FIDE）が設立され、ルールとタイトル制度の統一が進み、競技の公共性が一段と高まった。
+
+国際統括が進むと、選手の称号（グランドマスターなど）や大会運営の標準が整い、国内の強さと世界の強さが同じ物差しで比較されるようになる。世界選手権は単なる一対局ではなく、挑戦者を決める仕組みとスポンサー、会場運営を含む「物語装置」として肥大化し、社会的注目を集める舞台になった。1990年代には王座をめぐる政治的分裂が起き、2006年の統合戦へ至るなど、盤外の制度が盤上の歴史を左右した局面もある。チェスの近代史は、知の競技が国際制度に組み込まれていく過程そのものである。
+
+冷戦期にはミハイル・ボトヴィニクを中心とするソ連の「チェス学校」が象徴的な成功を収め、国家的支援と科学的訓練が結びついた。1972年のボビー・フィッシャー対ボリス・スパスキーの世界選手権は「世紀の一局」として政治的な意味も帯び、トップスポーツ並みの注目を集めた。アナトリー・カルポフとガルリ・カスパロフのライバル関係、そして21世紀のマグヌス・カールセンの登場は、チェスが国境を越えたスター競技であり続けることを示している。またジュディット・ポルガーの活躍は、制度が想定してきた枠を越えて強さが現れ得ることを示し、チェスが社会の多様性を映す鏡でもあることを印象づけた。
+
+国際化が進むにつれて、チェスは競技だけでなく象徴としても流通した。各国代表が集う大会や世界一決定戦は、国威発揚や文化外交の舞台にもなり得る。同時に、チェスは文学や芸術の中で「思考」そのものの比喩として使われ、ルイス・キャロル『鏡の国のアリス』（1871年）のように盤面の秩序を物語構造へ取り込む作品も生まれた。盤上での一手が読者の想像力を刺激するのは、ゲームが規則と自由の同居を体現するからであり、この象徴性が、チェスを単なる競技以上の存在として世界に根づかせてきた。
+
+### 8. チェッカー／ドラフツ：大衆娯楽から解析の競技へ
+
+斜め移動と飛び越し捕獲を基本とするドラフツ系は、アルケルケに遡るとされる。『遊戯の書（Libro de los juegos）』（1283年）にはアルケルケが取り上げられており、遊戯が「規則として記述できる」ほどに整っていたことがうかがえる。チェスが身分秩序や軍事の寓意を強く帯びたのに対し、ドラフツはより日常的な余暇として広がり、家庭・酒場・学校などに入り込みやすかった。
+
+ドラフツの競技化は、同じ系統の中でも「誰にとっての標準か」という問題を突きつける。家庭で遊ばれる簡略な規則、地域のハウスルール、クラブでの厳密な規則はしばしば食い違い、それを統一しようとすると今度は別の地域の伝統が周縁化される。捕獲の義務や引き分け規定の細部は、長いマッチでの「守り切り」の価値をどう評価するかに直結するため、制度化が進むほど議論も増えていった。
+
+たとえば近世には、捕獲を見落としたり、あえて捕獲しない手を指したりしたとき、相手がその駒を盤から取り除ける「ハフ（huffing）」のような慣習が存在した地域もあった。現代のルール感覚からすると過酷だが、「取らないことで有利を得る」抜け道をふさぎ、勝負を分かりやすくするための過渡期の強制力だったとも言える。またキングの動き方も一様ではなく、終盤の読み筋や引き分け観は、こうした細部の違いに敏感に反応してきた。
+
+イギリスやアメリカで広まった8×8のチェッカーに対し、ヨーロッパ大陸では10×10の国際ドラフツが発展するなど、盤の規格が複線化した点が特徴である。さらにロシア式やトルコ式など、捕獲や移動の癖が異なる変種も存在し、「同じ系統の遊戯が複数の標準を持つ」こと自体が歴史の厚みになっている。1947年に設立された世界ドラフツ連盟（FMJD）は国際ドラフツの競技化を支え、世界選手権の体系を整えていく。
+
+ドラフツは簡明に見えて、上位レベルでは終盤の精密さが勝敗を分ける。問題（作図）と解析が文化として伸び、計算機の時代にはその影響が特に強くなった。ジョナサン・シェイファーらが開発したプログラム「Chinook」は1990年代から人間王者と競い、2007年にはチェッカーが「完全解析された」と発表される。これは「遊戯が終わった」という意味ではなく、むしろ基準線が引き直され、より高いところで戦うための学び方が共有されるようになった、という出来事だった。
+
+### 9. 変種と問題文化：創作と批評としての盤上
+
+チェスにはフェアリーチェスと呼ばれる変則駒や変則ルールの伝統があり、芸術作品としての作図や、思考実験としての規則設計が続いてきた。将棋にも地域将棋や各種の変則将棋があり、盤面の拡張や駒種の追加は中世の大型将棋の名残としても理解できる。変種は「正統」から外れた遊びに見えがちだが、どの要素が面白さや難しさを生むかを照らし出す点で、歴史の一部であり続ける。
+
+変種と並んで重要なのが「問題（パズル）」の文化である。チェスではチェス・プロブレムやエンドゲーム・スタディが作家の署名入りで発表され、リヒャルト・レティの作品のように、盤上の幾何学と時間のパズルが鑑賞されてきた。将棋では詰将棋が独自に洗練され、実戦の勝ち筋を鍛えるだけでなく、短編小説のように起承転結を持つ作品として愛好される。観客は「解けるかどうか」だけでなく「手順が美しいか」「意外性があるか」を語り、作品が世代を越えて引用される。ドラフツでも作図と終盤研究は重要で、少ない駒での強制手順を読み切る訓練は競技の土台になる。
+
+教育用の簡略化ルールや入門教材の工夫も、この系統のゲームが長く生きる理由である。学校や地域の教室では、勝敗以上に礼儀や集中力、先読みの態度が評価されることも多い。同じゲームが「競技」と「教育」の二つの顔を持つことは、盤上遊戯が社会に根づく仕方の多様さを示している。
+
+### 10. デジタル時代：機械の強さが文化を揺り動かす
+
+1997年のIBM「Deep Blue」がガルリ・カスパロフを破った出来事は、チェスが計算機の象徴的な舞台であることを世界に印象づけた。その後エンジンは急速に強くなり、対局の準備はデータベースと解析を前提に進められるようになる。オープンソースの「Stockfish」や、自己対戦学習を取り入れた「Leela Chess Zero」のような潮流は、強さの追求が共同制作の形を取り得ることを示した。
+
+将棋でも2000年代以降、プログラム同士の対戦や研究会が活性化し、2006年の「Bonanza」の躍進を契機に評価関数学習が注目される。2013年からの「電王戦」などを通じて、人間側の準備や研究の方法まで変わっていき、対局は「人間対機械」という見世物であると同時に、研究成果の公開実験になった。2017年に公開された「AlphaZero」が短期間の自己対戦学習でチェスや将棋に革新をもたらしたことは、定跡が「暗記」ではなく「探索の結果」として再解釈される契機になった。AIが好む手を検討して新しい戦型が流行したり、評価値の見方が議論になったりするなど、文化そのものが再編されていく。
+
+同時に、人間と機械の関係は「対決」から「協働」へも広がった。チェスでは分析エンジンを相棒にして新しいアイデアを掘り起こすことが一般化し、将棋でも検討ソフトが示す手をそのまま受け取るのではなく、なぜその手が成立するのかを言語化して自分の判断へ落とし込む訓練が重視される。この協働は、創造性を奪うというより、むしろ「人間が面白いと感じる筋」と「機械が強いと評価する筋」のずれを意識させ、盤上の美学を更新していく。一方でオンライン環境は不正の誘惑も増幅する。解析の利便性とフェアプレーの倫理を両立させることは、現代の盤上競技が避けて通れない制度設計になっている。
+
+オンライン対局と配信は地理的な隔たりを縮め、観戦者コミュニティと学習環境を一変させた。Chess.comやLichess、将棋ウォーズや81Dojoのような場は、対局人口の拡大と国際交流を促し、同時に競技規範の整備も新しい課題として突きつける。短時間の対局形式も人気になり、チェスではブリッツやバレット、将棋でも早指しの棋戦やイベントが注目される。時間が短いほど直観が前面に出るが、そこで現れるミスや妙手もまた「観る理由」になる。
+
+将棋・チェス・チェッカーは、それぞれ別の土地で育ったにもかかわらず、「有限の規則から無限に近い思考を引き出す」装置として似た進化を遂げた。王（将）を守る緊張、駒の役割差、定跡の共有、問題作成の創造性、強さを測る制度、そして機械による解析という近代の技術が、別々の言語圏で同じ問いを掘り下げてきたのである。一方で、将棋の持ち駒と「打つ」手がもたらす循環性、チェスの引き分け規定やポーン構造が生む長期計画、ドラフツの単純さの中に潜む終盤の厳密さは、それぞれ異なる美学を育てた。
+
+そして、この見出しが扱うべき対象は三つの有名競技に尽きない。象棋やチャンギ、マックルックのような地域的な将棋類、さらには各種の変則ルールや教育用の簡略版もまた、同じ発想の家族として連なっている。現代では、博物館や図書館が古い棋譜や棋具を保存し、研究者がゲームの伝播を追い、プレイヤーがネット越しに対局して文化を更新する。囲碁のような陣取り型や、賭けを中心に据えた遊びとは別の系統として、「駒を動かす思考ゲーム」は、遊びであり学びであり、そして時に社会の象徴として、これからも新しい語り方を獲得し続けるだろう。
+
+デジタル化はアーカイブの形も変えた。名局や古典的問題がデータベースとして再配布され、動画解説や講座が補助線となり、入門者が歴史の厚みへ直接触れやすくなる。逆に言えば、保存と共有の仕組みが整わなければ、競技は強くなっても文化は薄くなる。盤上の遊びが長い歴史の中で生き残ってきたのは、勝負の魅力だけでなく、学びと記録と共同体が互いを支えてきたからである。
