295と296に小分類を追加

--- a/29-地理．地誌．紀行/291／297-各国・各地域の地理・地誌・紀行/295／296-アメリカ大陸/295-北アメリカ/295-北アメリカ.md
+++ b/29-地理．地誌．紀行/291／297-各国・各地域の地理・地誌・紀行/295／296-アメリカ大陸/295-北アメリカ/295-北アメリカ.md
@@ -1,8 +1,13 @@
-# 295-＠北アメリカ
+# 295-北アメリカ
 
 ## 小分類
 
-（なし）
+- 295.1 カナダ
+- 295.3 アメリカ合衆国
+- 295.5 ラテンアメリカ
+- 295.6 メキシコ
+- 295.7 中央アメリカ［中米諸国］
+- 295.9 西インド諸島
 
 ## 分野の歴史
 
