--- a/29-地理．地誌．紀行/291／297-各国・各地域の地理・地誌・紀行/295／296-アメリカ大陸/296-南アメリカ/296-南アメリカ.md
+++ b/29-地理．地誌．紀行/291／297-各国・各地域の地理・地誌・紀行/295／296-アメリカ大陸/296-南アメリカ/296-南アメリカ.md
@@ -1,8 +1,15 @@
-# 296-＠南アメリカ
+# 296-南アメリカ
 
 ## 小分類
 
-（なし）
+- 296.1 北部諸国［カリブ沿海諸国］
+- 296.2 ブラジル
+- 296.3 パラグアイ
+- 296.4 ウルグアイ
+- 296.5 アルゼンチン
+- 296.6 チリ
+- 296.7 ボリビア
+- 296.8 ペルー
 
 ## 分野の歴史
 
