--- a/5-技術．工学/51／58-各種の技術・工学/58-製造工業/589-その他の雑工業/589.2-被服．身の回り品/589.21-衣服/589.21-衣服.md
+++ b/5-技術．工学/51／58-各種の技術・工学/58-製造工業/589-その他の雑工業/589.2-被服．身の回り品/589.21-衣服/589.21-衣服.md
@@ -15,6 +15,141 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 衣服産業の基礎：製品特性・工程・分業
+  - 1.1 衣服の役割（保護・装飾・身分表示・機能）と性能要件（耐久性、可動性、衛生性、審美性）
+  - 1.2 製品化の工程（素材→生地→企画・設計→型紙→裁断→縫製→仕上→流通・販売→使用後）と専門職・分業
+  - 1.3 企画・ブランド・小売が需要を組織し、生産計画・品質・価格帯に影響する仕組み
+- 2. 前近代：衣服生産の基盤（素材・職能・市場）
+  - 2.1 繊維素材（麻・絹・毛・綿）と紡績・織布・染色、地域産地と交易の形成
+  - 2.2 仕立て・補修の職能（仕立屋・裁縫）と注文生産、型紙・採寸・意匠の慣行
+  - 2.3 服飾の規範（身分・礼法・奢侈規制）と市場化が生産・消費を方向づける
+- 3. 近世〜19世紀：商業化と標準化の進展
+  - 3.1 綿工業・印刷染色の発展、化学染料の登場による色柄・量・価格帯の拡大
+  - 3.2 軍需・制服需要が促した仕様の統一とサイズ概念の萌芽、供給体制の整備
+  - 3.3 テーラリングの理論化（採寸・パターン）と、都市小売・広告がつくる需要の拡大
+- 4. 産業革命〜20世紀初頭：縫製工業・既製服・近代小売の成立
+  - 4.1 ミシンの実用化と普及（エリアス・ハウ、アイザック・シンガー等）による生産性の転換点
+  - 4.2 工場制・下請け・工程分解（バンドル方式等）と、品質・原価・納期を管理する仕組み
+  - 4.3 既製服（レディメイド）と百貨店・通信販売などの小売形態が市場を拡大する
+- 5. 20世紀前半：ファッション産業の制度化（規格・メディア・市場の統合）
+  - 5.1 戦争と制服生産が進めた規格化（仕様・サイズ）と品質要求、供給の統制
+  - 5.2 パターンメーキング／グレーディング、裁断・仕上の機械化が量産設計を確立する
+  - 5.3 ファッション・メディアと都市文化が流行を組織し、ブランド／知的財産の課題も顕在化する
+- 6. 戦後〜高度成長：大量消費社会とアパレル産業の拡大（日本を含む）
+  - 6.1 洋装化と既製服の普及、中間価格帯の形成が市場を拡大する
+  - 6.2 合成繊維（ナイロン、ポリエステル等）と機能加工が、手入れ・耐久・用途を再編する
+  - 6.3 企画・生産・販売の結合（メーカー、商社、小売の役割分担）と、品質・納期の運用が高度化する
+- 7. 国際分業とサプライチェーン：調達・貿易・統治の時代
+  - 7.1 1970年代以降の生産移転とOEM/ODMの拡大が、産地・技能・価格競争を再編する
+  - 7.2 貿易制度（MFAとその終了など）・関税・原産地規則が、企業の調達戦略と立地を規定する
+  - 7.3 監査・認証・コンプライアンスの普及と、労働・安全・品質・トレーサビリティの要求
+- 8. 1990年代以降：小売主導・データ化・高速サイクル
+  - 8.1 SPA／ファストファッションが、設計〜調達〜販売を統合し短サイクル化を加速する
+  - 8.2 POS・需要予測・物流最適化（RFID等）が在庫とリードタイムの管理を変える
+  - 8.3 EC・D2C・SNSが販促と顧客接点を再編し、返品増加や過剰生産の問題が表面化する
+- 9. 環境・倫理・循環型：外部性への対応が競争条件になる
+  - 9.1 廃棄、温室効果ガス、水資源、化学物質、マイクロプラスチック等の負荷の可視化（LCA等）
+  - 9.2 リユース・リペア・リサイクル（繊維to繊維）と、解体しやすさ等を含む循環設計
+  - 9.3 規制・自主規制（有害化学物質管理、拡大生産者責任の議論等）と、表示・責任の再定義
+- 10. 現在と今後：デジタル化・自動化・オンデマンドが変える産業構造
+  - 10.1 CAD/CAM、3Dボディスキャン、バーチャル試着が企画・設計・検証の手順を変える
+  - 10.2 自動裁断・ロボット縫製の進展と、布の変形・ハンドリングが残す技術的ボトルネック
+  - 10.3 オンデマンド／マスカスタマイゼーション、製品パスポート等が再配置する生産・在庫・責任
 -->
+
+### 1. 衣服産業の基礎：製品特性・工程・分業
+
+衣服は身体に直接触れる製品であり、保温・防護・衛生といった実用要件に加えて、着用場面や流行、記号性（所属・職業・性別規範など）にも左右される。サイズの適合、動作時のストレス、肌触りやアレルゲン、洗濯耐性といった品質項目は、設計段階から材料選択・縫製仕様・検査基準に連動し、同じデザインでも価格帯や販路によって許容範囲が変わる。季節性と短い販売期間が強く、需要の読み違いは在庫・値引き・廃棄として損失化しやすい点も、産業としての衣服を特徴づけてきた。
+
+製品化の工程は、繊維・糸・生地の調達、企画（ターゲット設定、品揃え、価格設計）、デザインとパターン（型紙）作成、試作と修正、裁断、縫製、仕上げ・検品、物流、店頭・オンラインでの販売、使用後の回収や再流通まで連なっている。工程は分業されやすく、素材側（紡績・織布・編立・染色加工）、衣服側（パターン、縫製、仕上）、市場側（小売・EC・物流）がそれぞれ独自の設備と技能を持つ。ここに、ブランドや小売が需要を組織する仕組み（コレクション、広告、店頭演出、価格戦略）が重なり、技術だけでは説明できない産業の運動が生まれる。
+
+衣服の工業化が進むほど、寸法と品質の「言語」を揃える必要が増える。サイズ表記や採寸点の定義、縫い代・許容差、縫い目強度、色落ち・移染、ピリング、収縮、付属の耐久性といった項目は、取引条件や検査仕様として標準化され、トラブルの調停にも使われてきた。素材混用率や洗濯表示、原産地表示などの表示制度も、消費者保護だけでなく、サプライチェーンが長くなる中で責任範囲を切り分ける実務として重要性を増している。
+
+### 2. 前近代：衣服生産の基盤（素材・職能・市場）
+
+前近代の衣服は、多くの地域で家内的な紡績・織布・染色と、仕立て・補修の技能に支えられていた。麻・絹・毛・綿は気候と牧畜・農業条件に左右され、染色は植物染・鉱物染・媒染の知識を要した。布は高価で、衣服は「作って終わり」ではなく、解いて洗い直し、仕立て直し、継ぎ当て、別用途への転用を通じて寿命を延ばすことが合理的だった。この循環は、繊維資源の制約だけでなく、衣服が家計資産であるという認識とも結びついていた。
+
+職能の分化も早い段階から進む。仕立屋や裁縫職は、採寸や裁ち合わせの経験則を蓄積し、注文生産で顧客の体型と用途に合わせた衣服を作った。和装圏では、直線裁ちに基づく反物の扱いと仕立て、帯や小物との組み合わせが、衣服を「部品化」しやすく、修繕・仕立て替えを促した。他方で、都市の市場や交易が拡大すると、布や衣服の流通が厚みを増し、古着市場や行商は、価格帯の異なる需要を吸収する装置として機能した。
+
+さらに、衣服は社会秩序とも密接だった。奢侈規制や礼法は、色・素材・装飾の選択を制約し、同時に生産者側に「何が売れるか」を明確にした。儀礼・軍事・官僚制の衣服は、意匠の統一と数量調達を伴い、後の標準化や規格の考え方に連なる需要を形成した。
+
+### 3. 近世〜19世紀：商業化と標準化の進展
+
+近世から19世紀にかけて、綿の普及と商業化、都市人口の増加が衣服需要を拡大し、布の大量供給が「同じものを多く作る」方向を強めた。更紗や捺染（印刷染色）の発展は、柄の複製を容易にし、デザインが商品価値の重要要素になる。19世紀半ばにはウィリアム・パーキンが1856年に合成染料（モーブ）を発見し、アニリン染料の展開が色彩の選択肢を広げたが、堅牢度や安全性の問題も同時に抱え込んだ。色や柄の「流行」が市場を駆動する構造は、こうした技術と商業の結合によって強化された。
+
+制服需要も標準化を促した。軍服や官服、学校制服のように同一意匠を多数に供給する必要がある領域では、サイズ概念の整理、材料の規格、縫製仕様の統一が進む。労働者向けの実用衣料も同様で、1873年にレヴィ・ストラウスとジェイコブ・デイヴィスがリベット補強のズボンを特許化した例は、耐久性を要件に据えた衣服が広域市場へ伸びていく象徴でもある。採寸法やパターン理論が整備され、型紙の出版・頒布（例えばバタリック社の紙型、1860年代）によって、家庭内の衣服製作も「標準化されたレシピ」に近づいた。
+
+日本では19世紀後半以降、軍や官僚の制服を通じて洋装が制度的に導入され、都市部の仕立て・洋裁教育・小売が発展した。和装の生産・流通と並行しながら、洋装の既製化・規格化が進むことで、衣服産業は複数の体系を抱える形で近代化していった。
+
+### 4. 産業革命〜20世紀初頭：縫製工業・既製服・近代小売の成立
+
+縫製工業の生産性を大きく変えたのがミシンである。エリアス・ハウの発明（1846年の特許）や、アイザック・シンガーによる改良・販売戦略（1850年代以降）が普及を後押しし、手縫い中心だった工程は機械縫いへ移行した。ミシンは単なる道具ではなく、労働組織の再編を伴った。工程は細分化され、裁断・縫製・仕上げが分離され、下請けや都市の小工場、家庭内労働を含む多層的な供給網が形成された。
+
+既製服は、軍需や作業着などの実用領域から拡大し、次第に中産階級の衣服へ広がる。百貨店や通信販売（米国ではシアーズが1888年にカタログを本格化）といった近代小売は、全国規模で需要を束ね、サイズ・返品・価格表示・宣伝といった運用を整えた。パリでは19世紀後半にシャルル＝フレデリック・ウォルトがクチュールの制度を確立し、デザイナー名が価値を持つ仕組みが強まったが、これは大量生産と対立するだけでなく、模倣と差別化を通じて産業全体の意匠競争を刺激した。
+
+ミシンの普及は工場だけでなく家庭にも及び、衣服の供給は「買う／作る」の両輪で拡大した。紙型の頒布や裁縫雑誌は、個人が既製服のシルエットを参照しながら自宅で衣服を作る経路を提供し、女性の家事労働や技能教育とも結びついた。日本でも洋裁の教育や講習、家庭用ミシンの普及が、戦後に既製服市場が拡大するまでの移行期を支え、仕立て・補修の文化は既製服の時代にも一定の形で残った。大量生産と家庭内生産の併存は、衣服が生活文化と工業製品の両方の性格を持つことを、制度面からも示している。
+
+一方で、縫製工業は労働問題と切り離せなかった。低賃金・長時間労働・安全軽視は各地で問題化し、1911年のトライアングル・シャツウエスト工場火災は、都市型縫製工場の危険と規制の必要性を象徴する出来事として記憶される。衣服産業の拡大は、同時に労働保護・労使交渉・安全基準の形成を促していった。
+
+### 5. 20世紀前半：ファッション産業の制度化（規格・メディア・市場の統合）
+
+20世紀前半は、戦争と大衆消費の拡大が衣服産業の制度を押し固めた時期である。第一次世界大戦と第二次世界大戦は、制服・防寒具・作業衣などの需要を急増させ、材料の配給や代替素材の使用、仕様の簡素化をもたらした。数量調達のためにサイズ体系や規格が整備され、検品と品質保証の考え方も強まる。生産現場では、出来高管理やライン編成など、工業生産の管理手法が取り込まれ、縫製は「技能の集合」から「管理された工程」へと性格を変えていった。
+
+戦時の統制は、衣服を「設計できる範囲」そのものに作用した。布地の節約や資材転用のために、丈や折り返し、ポケット数、装飾の使用が制限され、標準化された実用衣料が推奨される例もあった。こうした規制は、消費者の選択を狭める一方で、量産向けの仕様統一、代替素材の開発、品質検査の整備を促し、戦後の市場回復期に「規格に沿って大量に作る」経験として残った。日本でも統制経済下で衣料の配給・統制が行われ、戦後は不足を埋めるための補修・作り替えと、供給回復に伴う既製服化が並行して進むことになる。
+
+同時に、流行がメディアを通じて広域に伝播するようになる。雑誌、映画、広告は、衣服を生活必需品にとどめず、自己表現や階層上昇の手段として位置づけた。ココ・シャネルが1920年代に提示した実用性を伴う新しい女性像は、デザインが社会規範と結びついて変化しうることを示した例として語られることが多い。こうした文化的変化は、企画・宣伝・小売の役割を強め、衣服産業を「作る産業」から「売り方まで含む産業」へと拡張した。
+
+意匠の価値が上がるほど、模倣やデザイン流用の問題も顕在化する。衣服の形状は機能と審美の境界が曖昧で、法的保護の範囲も国や時代で揺れる。結果として、完全な排除ではなく、ブランド・品質・流通網・スピードによる差別化が、実務上の競争手段として発達していった。
+
+### 6. 戦後〜高度成長：大量消費社会とアパレル産業の拡大（日本を含む）
+
+戦後の復興と所得増加は、衣服を「少数を長く」から「用途に応じて買い替える」方向へ押し進めた。欧米では既製服が一般化し、1950〜60年代には若者文化と結びついた新しいスタイルが市場を拡張する。フランスでは1947年にクリスチャン・ディオールが「ニュー・ルック」を発表し、戦時の節約からの反動としてファッションの方向性が転換した。1960年代以降のプレタポルテ（既製高級服）の拡大は、デザインと量産をつなぐ制度として、デザイナーとメーカー、小売の関係を組み替えた。
+
+素材面では合成繊維の普及が大きい。デュポンが1930年代にナイロンを開発し、戦後はストッキングやスポーツ衣料などで需要が拡大した。ポリエステルやアクリルなども普及し、しわになりにくさ、速乾性、耐久性といった特性が日常衣料を変えた。日本でも化学繊維メーカーの成長とともに、イージーケア衣料やニット、制服・作業服の市場が広がり、洗濯機の普及と家庭労働の変化が「手入れのしやすさ」を価値に押し上げた。
+
+また、スポーツ・レジャーの拡大は機能衣料の需要を押し上げ、素材と縫製仕様の開発が進んだ。例えば透湿防水膜素材（ゴアテックス、1976年）の普及は、アウトドア衣料で「濡れにくいが蒸れにくい」という相反要件を商品価値に変え、シームテープによる目止め、止水ファスナー、接着芯地やラミネート加工など、縫うだけではない加工技術を一般化させた。ユニフォームや作業服でも、防炎・制電・高視認といった機能が規格や調達条件に組み込まれ、衣服は用途ごとに性能設計される工業製品としての性格を強めていく。
+
+産業構造としては、企画・生産・販売をどう結び付けるかが焦点になる。メーカー、商社、縫製工場、小売はそれぞれの機能を持ち、素材調達から販売までの連携が強まるほど、納期短縮と品揃え最適化が可能になる。国内市場の拡大は同時に、サイズ規格、品質表示、洗濯表示、クレーム対応といった「運用の標準」を整え、衣服産業を制度として成熟させていった。
+
+日本の流通面では、百貨店を中心とする取引慣行（委託販売、値引き販売、返品など）が、在庫リスクの分担と価格形成に影響してきた。売れ残りを前提にした運用は短期的には品揃えを厚くできる一方、過剰投入を誘発しやすく、後年の在庫最適化やサプライチェーン改革の動機にもなった。専門店チェーンや量販、セレクトショップの台頭は、商品企画と販促の権限を小売側へ移し、メーカー側に短サイクル対応と差別化を迫ることになる。
+
+### 7. 国際分業とサプライチェーン：調達・貿易・統治の時代
+
+1970年代以降、衣服の縫製は国際分業の中で再配置される。賃金格差、貿易政策、投資環境、物流の整備が、調達先を変え、東アジアから東南アジア、南アジア、中南米などへ生産が広がった。多国籍化は、OEM（相手先ブランド製造）やODM（設計・製造受託）を通じて、設計・資材手配・生産管理のノウハウを国境を越えて移転させた。衣服が「どこで作られ、どのように運ばれるか」は、製品の価格と納期を決める中心要因になった。
+
+国際ルールも構造を左右した。繊維・衣料品の貿易をめぐっては、多角的な協定や割当制度が長く作用し、2005年に段階的に終了した制度（衣料の数量制限の撤廃）は調達地の競争を一段と強めた。結果として、短納期対応が可能な地域と、大規模量産でコストを下げる地域が役割分担し、サプライチェーンは多層化した。
+
+物流の側面では、コンテナ輸送と港湾・通関の効率化が、衣服を世界規模の「標準的な荷物」にした。リードタイムを縮めるための航空便活用や、複数国にまたがる工程分割（生地は一国、縫製は別国、仕上げや検品はまた別国）も一般化し、調達はコストだけでなくリスク管理（災害、政治、為替、感染症など）を含む意思決定になった。企業側は、複数調達先の確保、素材の共通化、近距離生産の併用などで脆弱性を下げようとするが、分業が深いほど全体最適の設計は難しくなる。
+
+一方で、国際分業は労働・安全・環境の問題を可視化した。2013年のラナ・プラザ崩落事故は、縫製工場の安全確保がグローバルな課題であることを突き付け、監査・認証・是正措置の仕組みが強化される契機となった。監査は万能ではなく、書類主義や抜け道も指摘されてきたが、少なくとも調達の条件として労働・安全・トレーサビリティが組み込まれる流れは定着しつつある。
+
+
+### 8. 1990年代以降：小売主導・データ化・高速サイクル
+
+1990年代以降、衣服産業は小売が主導する局面を強める。SPA（製造小売）やファストファッションは、企画・生産・物流・販売を統合し、短いサイクルで品揃えを更新することで需要の変化に追随した。ギャップ、ZARA（インディテックス）、H&M、ユニクロなどの企業は、基本アイテムの大量供給からトレンド品の高速投入まで、異なるモデルで市場を拡大し、従来のメーカー主導の供給構造に大きな圧力をかけた。
+
+この変化を支えたのが情報化である。POSデータは売れ筋と死に筋を可視化し、需要予測と補充計画を精緻化した。バーコードやEDIは取引と在庫管理の標準基盤になり、RFIDの導入は棚卸し・欠品検知・物流追跡の効率化を促す。短納期化は、輸送・通関・倉庫運用の改善だけでなく、素材の共通化、仕様の標準化、近距離生産（ニアショア）など、産業全体の設計を伴って進んだ。
+
+短サイクル化は、企画と生産管理の仕事そのものも変えた。売上データにもとづく投入量の調整、初回は小ロットで走らせて反応を見て追加する運用、店舗在庫の偏りを是正する補充などは、従来の「季節ごとに大量投入して売り切る」発想と異なる。結果として、素材調達や生産キャパシティの確保、検品と物流の処理能力が競争力の一部になり、情報の速さが物の速さを左右する構図が強まった。
+
+ECとD2Cは販路を増やし、SNSは流行の生成と消費の速度をさらに上げた。反面、返品増加、過剰生産、価格競争の激化といった問題も表面化し、衣服産業の効率化が新しい外部性を生むことが議論の中心に据えられるようになった。
+
+### 9. 環境・倫理・循環型：外部性への対応が競争条件になる
+
+衣服の環境負荷は、綿花栽培の水使用、染色加工の化学物質、合成繊維由来の温室効果ガス、洗濯時のマイクロファイバー、廃棄物の増加など多面的である。負荷の全体像を示すためにライフサイクル評価（LCA）が用いられ、企業は温室効果ガス削減目標や水・化学物質管理を掲げるようになった。化学物質管理では、サプライチェーン全体でのルール整備（例えばZDHCの取り組み、2010年代以降）が進み、原材料から工場工程までの管理を求める圧力が強まった。
+
+循環型の取り組みは、回収・再販売（リユース）から修理（リペア）、再資源化（リサイクル）へ広がっている。ただし衣服は混紡・付属品・染料・仕上げ加工が複雑で、繊維から繊維への水平リサイクルは技術・コスト・品質の壁が高い。結果として、設計段階での単一素材化、解体しやすい付属の選択、耐久性の向上といった「作り方の変更」が重要になる。循環は善意だけで成立しにくく、回収コストや品質保証、再流通の需要をどう作るかが課題となる。
+
+循環を事業として成立させる試みとして、レンタルやサブスクリプション、公式の中古販売、修理窓口の常設などが広がった。これらは廃棄量の抑制に寄与しうる一方、回収・選別・クリーニング・再販のコスト、衛生・安全の担保、在庫回転の遅さといった別の制約も抱える。結果として、循環は単一の解決策ではなく、長寿命化（丈夫さ、修理しやすさ）、適正生産（作り過ぎない）、資源循環（回収と再資源化）を組み合わせた運用として整理されるようになった。
+
+倫理面では、強制労働や過重労働のリスク、賃金の妥当性、ジェンダー不平等などが継続的に問題化してきた。外部性への対応は広報ではなく運用の課題であり、透明性の向上、苦情処理の仕組み、長期的な取引関係の構築など、産業のルールそのものが問われている。
+
+### 10. 現在と今後：デジタル化・自動化・オンデマンドが変える産業構造
+
+衣服産業のデジタル化は、設計と検証の方法を変えつつある。アパレルCAD/CAMはパターン作成やグレーディング、マーキング（型入れ）の効率を上げ、3Dシミュレーションは試作回数を減らす可能性を持つ。3Dボディスキャンやバーチャル試着は、サイズ適合の改善や返品削減を狙う一方、プライバシーや計測データの標準化といった論点も伴う。デジタルサンプルが普及すれば、素材手配や輸送の無駄を減らせる反面、最終的な触感や着心地の評価をどう担保するかが残る。
+
+自動化は裁断では進みやすいが、縫製は難易度が高い。布は伸縮し、滑り、しわが寄り、重力で形が変わるため、硬い部材の組立とは異なる制御が必要になる。ロボット縫製や自動縫製機の研究開発は進むものの、完全自動化は工程や製品の設計変更（縫い代や部品構成の最適化）と一体でなければ実装しにくい。結果として、当面は「自動化できる部分を積み上げる」形で、裁断・検査・搬送・刺繍や一部縫製の自動化が進むと見られる。
+
+同時に、周辺業務のデジタル化と自動化も進む。画像認識による外観検査、タグ付けとトレーサビリティの連動、返品された商品の選別・再販可否判定、再梱包と再流通の最適化などは、欠陥率や返品率が収益に直結する環境で重要性を増している。需要予測や価格調整、店舗配分にデータ分析が使われるほど、予測誤差が過剰生産や品切れとして現れやすくなるため、データの偏りや急変（天候、社会状況）の扱い方も運用課題として前面に出てくる。
+
+オンデマンド生産やマスカスタマイゼーションは、在庫リスクを減らす可能性があるが、納期とコスト、品質の一貫性をどう確保するかが鍵になる。3Dニットや小ロット生産の技術は選択肢を増やし、さらに製品パスポートのような情報付与は、回収や再流通の基盤になりうる。衣服産業は、効率・速度・多様性を求めて拡大してきた歴史を持つ一方で、その副作用への対応が避けられない段階にある。今後は、作る技術だけでなく、作り方と売り方、使われ方まで含めた運用の設計が、産業の方向性を左右していく。
